support page, calorie ios page, track iphone page

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -7,19 +7,149 @@ en:
   site_url: /zh
   brand: Wuhoo
   slogan: Awesome apps for healthy lifestyle
-  products: Products
-  guides: Guides
-  support: Support
+  email: Email
+  weibo: Sina Weibo
+  twitter: Twitter
+  products:
+    title: Products
+    calorie_ios:
+      name: Calorie
+      device: for iPhone & iPad
+    calorie_mac:
+      name: Calorie
+      device: for Mac
+    track_iphone:
+      name: Health Diary
+      device: for iPhone
+    timer_ios:
+      name: Timer
+      device: Comming soon
+  guides:
+    title: Guides
+  support:
+    title: Support
+    guides:
+      title: Guides
+      description: Tips, tutorials and how-tos for all the app
+    email:
+      title: Send Email
+      description: Any question is welcome. Reply to you asap.
+    weibo:
+      title: Sina Weibo
+      description: Follow official account. Glad to help you out.
+    twitter:
+      title: Twitter
+      description: Follow official account. Happy to help you out.
   language: 简体中文
   calorie_ios:
+    title: Calorie - Better know your food calorie - Dan Thought Studio
+    description: Calorie is an iOS app. Use Calorie app browse and search foods or exercises. Log your energy intake or energy burn. Compare with recommended daily intake. Support iCloud. Support both iPhone and iPad.
+    icon:
+      alt: Calorie for iPhone & iPad App Icon
     name: Calorie
     device: for iPhone & iPad
-  calorie_mac:
-    name: Calorie
-    device: for Mac
+    screenshot:
+      alt: Calorie for iPhone & iPad App Screenshot
+      src: en-calorie-ios-screenshot.png
+    download: Get the App
+    buy: Buy on App Store - Calorie
+    campaign: /
+    press_kit: Press Kit
+    press_kit_zip: /
+    benefit:
+      why: Calorie is a common unit of food energy. One reason cause obesity is eating food with lots of calorie. So better know your food calorie. To be healthy.
+      how: Calculate recommended daily intake through your gender, age and weight. So if you know food calorie, you can control daily energy intake.
+      do: Use Calorie app browse and search foods or exercises. Log your energy intake or energy burn. Compare your daily intake with recommended daily intake.
+    feature:
+      search:
+        title: Search
+        detail: Search foods or exercises through name with network. Our foods library will be better and better.
+      categories:
+        title: Categories
+        detail: Browse foods or exercises through categories with network. Our foods library will increase.
+      brands:
+        title: Brands
+        detail: Browse foods through brands with network. Our foods with brands will increase.
+      logs:
+        title: Logs
+        detail: Add log base on online datas. If you can`t find your foods or exercises. Send an email to feedback
+      recommend:
+        title: Recommend
+        detail: Setup gender, weight and age. Calorie app can calculate recommended daily intake automatically.
+      daily:
+        title: Daily Intake
+        detail: Logs show your daily calorie intake and calorie burn. Summary everyday calorie net automatically.
+      icloud:
+        title: iCloud
+        detail: Your everyday calorie logs support iCloud. You can decide use iCloud or just local store.
+      universal:
+        title: Universal
+        detail: Calorie is an universal app. If you have both iPhone and iPad. It will be conveniently used on both devices.
   track_iphone:
+    title: Health Diary - Healthy lifestyle start with diary - Dan Thought Studio
+    description: Health Diary is an iOS app. Healthy lifestyle start with diary.
+    icon:
+      alt: Health Diary for iPhone App Icon
     name: Health Diary
     device: for iPhone
-  timer_ios:
-    name: Timer
-    device: Comming soon
+    screenshot:
+      alt: Health Diary for iPhone App Screenshot
+      src: en-track-iphone-screenshot.png
+    download: Get Free App
+    buy: Buy on App Store - Health Diary
+    campaign: /
+    press_kit: Press Kit
+    press_kit_zip: /
+    why:
+      title: Why we make this app
+      detail: Today, most of office people have eating disorders, time confusion, usually sit for a long time and lack of physical exercise. We advocate a healthy lifestyle, you can start with diary to record, understand the reasons, try to react and solve those problems.
+    benefit:
+      weight:
+        title: Record Weight
+        detail: Obesity may have an adverse effect on health, leading to reduced life expectancy or increased health problems. It is very easy to ignore this problem and increase weight. Why not begin to track your weight everyday. It can remind you to care your weight.
+      water:
+        title: Record Water
+        detail: Your body is composed of about 60% water. The functions of these bodily fluids include digestion, absorption, circulation, creation of saliva, transportation of nutrients, and maintenance of body temperature. You should drink enough water everyday.
+      mood:
+        title: Record Mood
+        detail: Stop negative emotions. The longer you let them control your thoughts, the longer you'll suffer, psychologically and physically. It's important to reduce stress. Breathe deeply for a few minutes and you may relax and let go of worries.
+      target:
+        title: Record Target
+        detail: Eating junk food, smoking and watching TV all day. Those kind of bad habits are unhealthy. Eat breakfast, walk after lunch and do some exercises. Those kind of good habits are healthy. Get rid of bad habits. Form good habits.
+    feature:
+      photo:
+        title: Photo
+        detail: Add photo to diary. Use camera to take photo or choose exist one from photo library is both fine.
+      diary:
+        title: Diary
+        detail: Try to write something about what happened everyday. Health is connecting with our life.
+      weight:
+        title: Weight
+        detail: Record weight in diary. Scroll ruler left or right to change weight. It is simple and quickly.
+      bmi:
+        title: BMI
+        detail: After set up your height. Automatically calculate BMI and BMI level after record weight.
+      bfr:
+        title: BFR
+        detail: After set up your age and gender. Automatically calculate fat rate of body after record weight.
+      water:
+        title: Water
+        detail: Record water in diary. It help you drink eight glasses of water with logs and chart.
+      mood:
+        title: Mood
+        detail: Record mood in diary. Six types to track. How are you? Smile, happy, neutral, sad, worry or angry.
+      target:
+        title: Target
+        detail: Record target in diary. Track five goals you want to finish every day. Get rid of your bad habit.
+      timeline:
+        title: Timeline
+        detail: Review everyday diary through timeline. It show diaries from the newest to oldest.
+      calendar:
+        title: Calendar
+        detail: Find specific diary through calendar. You can add diary for any day here. Never missing a day.
+      analysis:
+        title: Analysis
+        detail: Analysis of weight change, water drinking amount, mood and target finish count through charts.
+      icloud:
+        title: iCloud
+        detail: Your everyday health diary support iCloud. You can decide use iCloud or just local store.
