migrate knowledges to guides, make site responsive

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -158,7 +158,7 @@ en:
     benefit:
       weight:
         title: Record Weight
-        detail: Obesity may have an adverse effect on health, leading to reduced life expectancy or increased health problems. It is very easy to ignore this problem and increase weight. Why not begin to track your weight everyday. It can remind you to care your weight.
+        detail: Obesity may have an adverse effect on health, leading to reduced life expectancy or increased health problems. It is very easy to ignore this problem and increase weight. Why not begin to track your weight. It can remind you to care your weight.
       water:
         title: Record Water
         detail: Your body is composed of about 60% water. The functions of these bodily fluids include digestion, absorption, circulation, creation of saliva, transportation of nutrients, and maintenance of body temperature. You should drink enough water everyday.
