--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -61,9 +61,9 @@ zh:
       src: zh-calorie-ios-screenshot.png
     download: 立即下载
     buy: 在 App Store 上购买 - 热量助手
-    campaign: /
+    campaign: https://itunes.apple.com/cn/app/id744835140
     press_kit: 媒体资料
-    press_kit_zip: /
+    press_kit_zip: 热量助手媒体资料.zip
     benefit:
       why: 卡路里是一种常见的食物热量单位，导致肥胖的主要原因之一是吃高热量食物，因此更好地了解你的食物热量，摄入有营养的低热量食物，有利于保持身体健康。
       how: 有一种简单便捷的方法可以通过你的性别，年龄和体重来计算出推荐的每日所需基本热量，如果你知道所吃食物的热量，计算一下你摄入的热量总和，就可以控制每日热量摄入。
@@ -105,9 +105,9 @@ zh:
       src: zh-calorie-mac-screenshot.png
     download: 立即下载
     buy: 在 App Store 上购买 - 热量助手
-    campaign: /
+    campaign: https://itunes.apple.com/cn/app/id1072738271
     press_kit: 媒体资料
-    press_kit_zip: /
+    press_kit_zip: 热量助手媒体资料.zip
     benefit:
       why: 卡路里是一种常见的食物热量单位，导致肥胖的主要原因之一是吃高热量食物，因此更好地了解你的食物热量，摄入有营养的低热量食物，有利于保持身体健康。
       how: 有一种简单便捷的方法可以通过你的性别，年龄和体重来计算出推荐的每日所需基本热量，如果你知道所吃食物的热量，计算一下你摄入的热量总和，就可以控制每日热量摄入。
@@ -149,9 +149,9 @@ zh:
       src: zh-track-iphone-screenshot.png
     download: 免费下载
     buy: 在 App Store 上购买 - 健康日记
-    campaign: /
+    campaign: https://itunes.apple.com/cn/app/id1030688256
     press_kit: 媒体资料
-    press_kit_zip: /
+    press_kit_zip: 健康日记媒体资料.zip
     why:
       title: 我们为什么制作这个应用
       detail: 如今，随着生活水平的提高，工作压力的加大，大部分职场人员都有饮食不规律，作息时间混乱，平时也是久坐族，缺乏体育锻炼；我们倡导一种健康的生活方式，你可以从日记开始记录每天的健康情况，理解并且简易分析问题的来源，采取行动从根本上解决问题。
