update products campaign links and add baidu tongji

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -61,7 +61,7 @@ en:
       src: en-calorie-ios-screenshot.png
     download: Get the App
     buy: Buy on App Store - Calorie
-    campaign: https://itunes.apple.com/us/app/id744835140
+    campaign: http://a.danthought.com/siteic
     press_kit: Press Kit
     press_kit_zip: Calorie Press Kit.zip
     benefit:
@@ -105,7 +105,7 @@ en:
       src: en-calorie-mac-screenshot.png?20160311
     download: Get the App
     buy: Buy on App Store - Calorie
-    campaign: https://itunes.apple.com/us/app/id1072738271
+    campaign: http://a.danthought.com/sitemc
     press_kit: Press Kit
     press_kit_zip: Calorie Press Kit.zip
     benefit:
@@ -149,7 +149,7 @@ en:
       src: en-track-iphone-screenshot.png
     download: Get Free App
     buy: Buy on App Store - Health Diary
-    campaign: https://itunes.apple.com/us/app/id1030688256
+    campaign: http://a.danthought.com/sitept
     press_kit: Press Kit
     press_kit_zip: Health Diary Press Kit.zip
     why:
