--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -61,7 +61,7 @@ zh:
       src: zh-calorie-ios-screenshot.png
     download: 立即下载
     buy: 在 App Store 上购买 - 热量助手
-    campaign: https://itunes.apple.com/cn/app/id744835140
+    campaign: http://b.danthought.com/siteic
     press_kit: 媒体资料
     press_kit_zip: 热量助手媒体资料.zip
     benefit:
@@ -105,7 +105,7 @@ zh:
       src: zh-calorie-mac-screenshot.png
     download: 立即下载
     buy: 在 App Store 上购买 - 热量助手
-    campaign: https://itunes.apple.com/cn/app/id1072738271
+    campaign: http://b.danthought.com/sitemc
     press_kit: 媒体资料
     press_kit_zip: 热量助手媒体资料.zip
     benefit:
@@ -149,7 +149,7 @@ zh:
       src: zh-track-iphone-screenshot.png
     download: 免费下载
     buy: 在 App Store 上购买 - 健康日记
-    campaign: https://itunes.apple.com/cn/app/id1030688256
+    campaign: http://b.danthought.com/sitept
     press_kit: 媒体资料
     press_kit_zip: 健康日记媒体资料.zip
     why:
