optimize download button

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -59,7 +59,7 @@ en:
     screenshot:
       alt: Calorie for iPhone & iPad App Screenshot
       src: en-calorie-ios-screenshot.png
-    download: Get the App
+    download: Get it now
     buy: Buy on App Store - Calorie
     campaign: http://a.danthought.com/siteic
     press_kit: Press Kit
@@ -103,7 +103,7 @@ en:
     screenshot:
       alt: Calorie for Mac App Screenshot
       src: en-calorie-mac-screenshot.png?20160311
-    download: Get the App
+    download: Get it now
     buy: Buy on App Store - Calorie
     campaign: http://a.danthought.com/sitemc
     press_kit: Press Kit
@@ -147,6 +147,6 @@ en:
     screenshot:
       alt: Workout for iPhone App Screenshot
       src: en-workout-iphone-screenshot.png
-    download: Get Free App
+    download: Get it free
     buy: Buy on App Store - Wuhoo Workout
     campaign: http://a.danthought.com/sitewi
