--- a/locales/en.yml
+++ b/locales/en.yml
@@ -54,16 +54,16 @@ en:
     title: 切换到中文
   calorie_ios:
     title: Calorie - Log foods calorie intake and exercises calorie burn - Wuhoo
-    description: Calorie is an iOS app. Use Calorie app browse and search foods or exercises. Log your energy intake or energy burn. Compare with recommended daily intake. Support iCloud. Support iPhone, iPad and Mac.
+    description: Wuhoo Calorie is an iOS app. Use Wuhoo Calorie app browse and search foods or exercises. Log your energy intake or energy burn. Compare with recommended daily intake. Support iCloud. Support iPhone, iPad and Mac.
     icon:
-      alt: Calorie for iPhone & iPad App Icon
+      alt: Wuhoo Calorie for iPhone & iPad App Icon
     name: Calorie
     device: for iPhone & iPad
     screenshot:
-      alt: Calorie for iPhone & iPad App Screenshot
+      alt: Wuhoo Calorie for iPhone & iPad App Screenshot
       src: en-calorie-ios-screenshot.png
     download: Get it now
-    buy: Buy on App Store - Calorie
+    buy: Buy on App Store - Wuhoo Calorie
     campaign: http://a.danthought.com/siteic
     press_kit: Press Kit
     press_kit_zip: Calorie Press Kit.zip
@@ -97,17 +97,17 @@ en:
         title: Desktop
         detail: Calorie also have a Mac app. If you have a Mac. It will be conveniently used on Desktop.
   calorie_mac:
-    title: Calorie - Log foods calorie intake and exercises calorie burn - Wuhoo
-    description: Calorie is a Mac app. Use Calorie app browse and search foods or exercises. Log your energy intake or energy burn. Compare with recommended daily intake. Support iCloud. Support iPhone, iPad and Mac.
+    title: Wuhoo Calorie - Log foods calorie intake and exercises calorie burn - Wuhoo
+    description: Wuhoo Calorie is a Mac app. Use Wuhoo Calorie app browse and search foods or exercises. Log your energy intake or energy burn. Compare with recommended daily intake. Support iCloud. Support iPhone, iPad and Mac.
     icon:
-      alt: Calorie for Mac App Icon
+      alt: Wuhoo Calorie for Mac App Icon
     name: Calorie
     device: for Mac
     screenshot:
-      alt: Calorie for Mac App Screenshot
+      alt: Wuhoo Calorie for Mac App Screenshot
       src: en-calorie-mac-screenshot.png?20160311
     download: Get it now
-    buy: Buy on App Store - Calorie
+    buy: Buy on App Store - Wuhoo Calorie
     campaign: http://a.danthought.com/sitemc
     press_kit: Press Kit
     press_kit_zip: Calorie Press Kit.zip
