--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -18,10 +18,10 @@ zh:
       name: 购买与退款
       device: ""
     calorie_ios:
-      name: 热量助手
+      name: 热量
       device: iPhone 和 iPad 版
     calorie_mac:
-      name: 热量助手
+      name: 热量
       device: Mac 版
     workout_iphone:
       name: 训练
@@ -53,17 +53,17 @@ zh:
     name: English
     title: Switch to English
   calorie_ios:
-    title: 热量助手 - 记录食物热量摄入和运动热量消耗 - Wuhoo
-    description: 热量助手是一款 iOS 应用，使用热量助手应用来浏览和搜索食物或锻炼，记录你的热量摄入或者热量消耗，自动计算每日摄入热量的净值，还可以轻松同每日所需基本热量进行比较，成为你的好助手，支持 iCloud，同时支持 iPhone，iPad 和 Mac。
+    title: 热量 - 记录食物热量摄入和运动热量消耗 - Wuhoo
+    description: Wuhoo 热量是一款 iOS 应用，使用 Wuhoo 热量应用来浏览和搜索食物或锻炼，记录你的热量摄入或者热量消耗，自动计算每日摄入热量的净值，还可以轻松同每日所需基本热量进行比较，成为你的好助手，支持 iCloud，同时支持 iPhone，iPad 和 Mac。
     icon:
-      alt: 热量助手 iPhone 和 iPad 版应用图标
-    name: 热量助手
+      alt: Wuhoo 热量 iPhone 和 iPad 版应用图标
+    name: 热量
     device: iPhone 和 iPad 版
     screenshot:
-      alt: 热量助手 iPhone 和 iPad 版应用截图
+      alt: Wuhoo 热量 iPhone 和 iPad 版应用截图
       src: zh-calorie-ios-screenshot.png
     download: 立即下载
-    buy: 在 App Store 上购买 - 热量助手
+    buy: 在 App Store 上购买 - Wuhoo 热量
     campaign: http://b.danthought.com/siteic
     press_kit: 媒体资料
     press_kit_zip: 热量助手媒体资料.zip
@@ -97,17 +97,17 @@ zh:
         title: Mac
         detail: 热量还有 Mac 版的应用，如果你拥有 Mac，在其上使用会很方便。
   calorie_mac:
-    title: 热量助手 - 记录食物热量摄入和运动热量消耗 - Wuhoo
-    description: 热量助手是一款 Mac 应用，使用热量助手应用来浏览和搜索食物或锻炼，记录你的热量摄入或者热量消耗，自动计算每日摄入热量的净值，还可以轻松同每日所需基本热量进行比较，成为你的好助手，支持 iCloud，同时支持 iPhone，iPad 和 Mac。
+    title: 热量 - 记录食物热量摄入和运动热量消耗 - Wuhoo
+    description: Wuhoo 热量是一款 Mac 应用，使用 Wuhoo 热量应用来浏览和搜索食物或锻炼，记录你的热量摄入或者热量消耗，自动计算每日摄入热量的净值，还可以轻松同每日所需基本热量进行比较，成为你的好助手，支持 iCloud，同时支持 iPhone，iPad 和 Mac。
     icon:
-      alt: 热量助手 Mac 版应用图标
-    name: 热量助手
+      alt: Wuhoo 热量 Mac 版应用图标
+    name: 热量
     device: Mac 版
     screenshot:
-      alt: 热量助手 Mac 版应用截图
+      alt: Wuhoo 热量 Mac 版应用截图
       src: zh-calorie-mac-screenshot.png
     download: 立即下载
-    buy: 在 App Store 上购买 - 热量助手
+    buy: 在 App Store 上购买 - Wuhoo 热量
     campaign: http://b.danthought.com/sitemc
     press_kit: 媒体资料
     press_kit_zip: 热量助手媒体资料.zip
